[gd_scene load_steps=3 format=3 uid="uid://d1cvwl77m6kxf"]

[ext_resource type="Script" path="res://UI/Components/trap_button.gd" id="1_nrovm"]
[ext_resource type="Theme" uid="uid://755luokyxafl" path="res://assets/themes/main_theme.theme" id="1_vmkdk"]

[node name="TrapButton" type="Button"]
layout_direction = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -15.5
offset_right = 18.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(18, 15)
theme = ExtResource("1_vmkdk")
text = "Oui"
script = ExtResource("1_nrovm")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered" flags=6]
[connection signal="pressed" from="." to="." method="_on_pressed"]
